--- a/package.json
+++ b/package.json
@@ -20,15 +20,18 @@
     "@types/react": "18.2.18",
     "@types/react-dom": "18.2.7",
     "@types/webpack-env": "^1.18.1",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
     "autoprefixer": "^10.4.12",
     "cheerio": "^1.0.0-rc.12",
     "clsx": "^1.2.1",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "fast-glob": "^3.2.11",
     "feed": "^4.2.2",
     "next": "13.4.16",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-refresh": "^0.14.0",
     "remark-gfm": "^3.0.1",
     "tailwindcss": "^3.3.3",
     "typescript": "5.1.6"
