--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.4.16",
+    "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/typography": "^0.5.4",
     "@types/node": "20.4.7",
     "@types/react": "18.2.18",
