--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.16",
     "prettier": "^3.0.1",
